<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_promociones"
            android:icon="@drawable/ic_promociones"
            android:title="@string/menu_promociones" />
        <item
            android:id="@+id/nav_comentarios"
            android:icon="@drawable/ic_comentarios"
            app:showAsAction="always"
            android:title="@string/menu_comentarios" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_salir"
            android:title="@string/menu_salir" />
    </group>
</menu>