<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.muchikapp.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_promociones"
        android:name="com.example.muchikapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_promociones"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_comentarios"
        android:name="com.example.muchikapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_comentarios"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.example.muchikapp.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

</navigation>