<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja"
    android:fitsSystemWindows="true"
    tools:context=".Idioma">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="centerInside"
        android:layout_centerInParent="true"
        android:layout_margin="100dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rojo_principal"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingTop="75dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/tvTituloIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam_extrabold"
            android:text="@string/idioma_titulo"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvIdiomaContenido1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/idioma_contenido1"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvIdiomaContenido2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam"
            android:text="@string/idioma_contenido2"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvIdiomaContenido3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idioma_contenido3"
        android:fontFamily="@font/be_vietnam"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:layout_above="@id/llayIdiomas"
        android:textAlignment="center"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:id="@+id/llayIdiomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp" >

        <Button
            android:id="@+id/btnCastellano"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/castellano"
            android:textColor="@color/blanco"
            android:fontFamily="@font/be_vietnam_semibold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/boton_rojo"
            android:layout_weight="1"
            android:layout_marginHorizontal="15dp" />

        <Button
            android:id="@+id/btnIngles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingles"
            android:textColor="@color/blanco"
            android:fontFamily="@font/be_vietnam_semibold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="@drawable/boton_rojo"
            android:layout_weight="1"
            android:layout_marginHorizontal="15dp" />

    </LinearLayout>

</RelativeLayout>