<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlPantalla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bienvenida1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_tuto"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bienvenida1"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="200dp"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida1_titulo"
            android:fontFamily="@font/be_vietnam_extrabold"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvContenido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida1_contenido1"
            android:fontFamily="@font/be_vietnam"
            android:textColor="@color/blanco"
            android:textSize="30sp"
            android:layout_marginVertical="30dp" />

        <TextView
            android:id="@+id/tvContenido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenida1_contenido2"
            android:fontFamily="@font/be_vietnam"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

    </LinearLayout>

</RelativeLayout>