<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_rosa" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_salir"
            android:textAlignment="center"
            android:fontFamily="@font/be_vietnam_extrabold"
            android:textColor="@color/rojo"
            android:textSize="50sp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/si"
                android:textColor="@color/blanco"
                android:fontFamily="@font/be_vietnam_semibold"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/boton_rojo"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@color/blanco"
                android:fontFamily="@font/be_vietnam_semibold"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:background="@drawable/boton_rojo"
                android:layout_weight="1"
                android:layout_marginHorizontal="15dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>